# mk_torrent

./: .bandit.yml  .codespellrc  .gitignore  .markdownlint.json  .mlc.json  .pre-commit-config.yaml  .release-please-config.json  AUDIOBOOK_METADATA_BREAKTHROUGH.md  CLEANUP_PLAN.md  CODEOWNERS  CONTRIBUTING.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_LANDSCAPE_ANALYSIS.md  LICENSE  METADATA_CORE_REFACTOR.md  MIGRATIONS.md  Metadata Core Refactor & Modularization Blueprint.md  OBSERVABILITY_CICD_PACK.md  PROJECT_STATUS.md  Phase3A-tracker-audit.md  README.md  __init__.py  __main__.py  async_utils.py  check_metadata_health.py  cli.py  codecov.yml  config.py  core_health_checks.py  core_secure_credentials.py  cspell.json  database.py  demo_future_enhancement.py  feature_metadata_engine.py  feature_red_uploader.py  feature_validator.py  health_checks.py  metadata_health_report.json  module_cleanup_analysis.md  (+35 more)
.cspell/: project-terms.txt
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  labeler.yml  labels.yml  pr-size.yml  release-drafter.yml  release-please.yml  security.yml  semantic-pr.yml
docs/: FAQ.md  INSTALLATION.md  MIGRATION_GUIDE.md  PROJECT_ORGANIZATION.md  QUICK_START.md  README.md  RESTRUCTURE_SUMMARY.md  ROLLOUT_PLAN.md  SECURITY.md  TEST_REFACTORING_SUMMARY.md  TRACKER_UPLOAD_ENHANCEMENT.md  TRACKER_UPLOAD_PRD.md  USER_GUIDE.md  bbcode-templates-demo-results.md  faq.md  installation.md  quick-start.md  readme.md  security.md  test-refactoring-summary.md  user-guide.md
docs/_summaries/: readme.md  template.md
docs/active/: 20250902--legacy-cleanup.md  20250902--metadata-cleanup.md  20250902--session-summary.md  20250902-legacy-cleanup.md  20250902-metadata-cleanup.md  CURRENT_STATUS.md  DOC_MANAGEMENT.md  LEGACY_CLEANUP_2025-09-02.md  METADATA_CLEANUP_2025-09-02.md  NEXT_STEPS.md  RED_INTEGRATION_COMPLETE.md  RED_MODULES_REFACTOR.md  SESSION_SUMMARY_2025-09-02.md  TESTING_GUIDE.md  UI_LIBRARY_GUIDELINES.md  current-status.md  doc-management.md  integration-factory-enhancement-complete.md  next-steps.md  phase-3b3-4-authentication-implementation-summary.md  red-integration-complete.md  red-modules-refactor.md  testing-guide.md  ui-library-guidelines.md
docs/adr/: 0001-integrations-vs-api.md  adr-0001-choose-pydantic-for-schema-validation.md  adr-0002-switch-to-sqlite-for-metadata-cache.md  readme.md
docs/core/metadata/: 00 — Recommended Packages & Project Extras.md  00-recommended-packages-project-extras.md  00.0-recommended-packages-project-extras.md  01-goals.md  02-high-level-architecture.md  03 — Proposed Directory Layout.md  03-proposed-directory-layout.md  04 — Canonical Data Model.md  04-canonical-data-model.md  05 — Interfaces & Dependency Injection.md  05-interfaces-dependency-injection.md  06 — Engine Pipeline.md  06-engine-pipeline.md  07 — Services Details.md  07-services-details.md  07.1 — HTML Cleaner Service.md  07.1-html-cleaner-service.md  07.2 — Format Detector Service.md  07.2-format-detector-service.md  07.3 — Audnexus Source.md  07.3-audnexus-source.md  07.4 — Path Info Source.md  07.4-path-info-source.md  07.5 — Audiobook Metadata Field Merger.md  07.5-audiobook-metadata-field-merger.md  07.6 — Embedded Source (Technical Focus).md  07.6-embedded-source-technical-focus.md  08 — Validators.md  08-production-grade-exceptions.md  08-validators.md  09 — Tracker Mapping.md  09-tracker-mapping.md  (+28 more)
docs/qBittorrent-api/: README.md  qBittorrent_api_authentication.md  qBittorrent_api_client.md  qBittorrent_api_create.md  qBittorrent_api_definitions.md  qBittorrent_api_log.md  qBittorrent_api_search.md  qBittorrent_api_transfer.md
docs/reference/: API_REFERENCE.md  AUDNEXUS_API_TEMPLATES.md  Audnexus API — Unofficial Markdown Guide (v1.8.0).md  CONFIGURATION_GUIDE.md  DEVELOPMENT_GUIDE.md  GIT_BRANCH_STRATEGY.md  PERFORMANCE_GUIDE.md  PROJECT_STRUCTURE.md  api-reference.md  audnexus-api-unofficial-markdown-guide-v1.8.0.md  configuration-guide.md  development-guide.md  git-branch-strategy.md  performance-guide.md  project-structure.md  red-api-reference.md
docs/rfc/: readme.md  rfc-0001-metadata-caching-strategy.md
examples/: audiobook_upload_workflow.py  audiobook_workflow.py  demo_field_merger.py  metadata_core_demo.py  package_integration_demo.py  real_sample_demo.py  validation_demo.py
examples/integration_tests/: README.md  audiobook_metadata_integration_demo.py  readme.md  test_audiobook_processor.py
scripts/: README.md  auto_archive_active.py  debug_metadata.py  demo_bbcode_templates.py  fix_timestamp_T.py  gen_docs_index.py  new_adr.py  new_rfc.py  organize_docs.py  readme.md  rename_docs.py  run.py  run_legacy.py  test_exceptions.py  test_mutagen_m4b.py  test_refactored_structure.py  update_doc_timestamps.py
scripts/cli/: path_compliance.py  red_upload_cli.py
scripts/red/: test_audiobook_complete.py  test_complete_red_workflow.py  test_real_audiobook.py  test_real_audiobook_comprehensive.py  test_real_audiobook_paths.py  test_red_end_to_end.py  test_red_production.py  test_red_simplified.py  test_refactored_structure.py
scripts/tools/: debug_bbcode_output.py  refactor_red_modules.py  test_metadata.py  test_mutagen_m4b.py
src/mk_torrent/: __init__.py  __main__.py  cli.py  config.py
temp_disabled_tests/: test_real_red_upload.py  test_red_upload_clean.py
tests/: __init__.py  conftest.py  readme.md  test_api_qbittorrent.py  test_metadata_engine.py  test_real_data_comprehensive.py  test_secure_credentials.py  test_upload_queue.py
tests/integration/: test_audiobook_complete.py  test_bbcode_output.py  test_engine_audiobook_e2e.py  test_real_audiobook.py  test_real_audiobook_paths.py  test_red_api.py  test_red_end_to_end.py  test_red_full_pipeline.py  test_red_integration.py  test_red_pipeline.py  test_red_upload.py  test_template_integration.py
tests/unit/: __init__.py
tests/utils/: real_data_helpers.py
(+139 files in other folders)
